--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <meta property="og:title" content="FirstCry.com" />
     <meta property="og:description" content="Impact Digital" />
-    <meta property="og:url" content="https://impact-digital.github.io/RK-Electronics/" />
-    <meta property="og:image" content="https://impact-digital.github.io/RK-Electronics/logo.jpeg" />
+    <meta property="og:url" content="https://impact-digital.github.io/FirstCry.Com/" />
+    <meta property="og:image" content="https://impact-digital.github.io/FirstCry.Com/logo.webp" />
 
     <title>FirstCry.com</title>
     
-    <link rel="icon" type="image/x-icon" href="img/logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="logo.webp">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
